Run formatter on repo

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp core"
+    "# | default_exp core"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import logging\n",
     "import os\n",
     "\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from datasets import load_dataset\n",
     "from squeakily.filter import check_char_repetition, check_flagged_words, minhash_dedup\n",
     "from squeakily.clean import remove_empty_lines, normalize_whitespace"
@@ -66,17 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "class Pipeline:\n",
     "    \"\"\"\n",
     "    A pipeline is a collection of datasources and their associated transformations to be run.\n",
     "    \"\"\"\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        datasources # The datasources to be run\n",
-    "    ):\n",
+    "\n",
+    "    def __init__(self, datasources):  # The datasources to be run\n",
     "        self.datasources = datasources\n",
-    "    \n",
+    "\n",
     "    def __run_filter(self, dataset, column, filter_fn, dry_run, num_proc):\n",
     "        \"\"\"\n",
     "        Run a filter on a dataset.\n",
@@ -94,15 +92,15 @@
     "                lambda x: filter_fn(x[column]),\n",
     "                num_proc=num_proc,\n",
     "            )\n",
-    "    \n",
+    "\n",
     "    def run(\n",
     "        self,\n",
-    "        global_filters=[],      # Filters to be run at the dataset level rather than the example level\n",
-    "        global_cleaners=[],     # Cleaners to be run at the dataset level rather than the example level\n",
-    "        cleaning_first=False,   # Whether to run the cleaning transformations first\n",
-    "        globals_first=False,    # Whether to run the global transformations first\n",
-    "        dry_run=False,          # Whether to run the pipeline or only calculate the various criteria and add as a column\n",
-    "        num_proc=os.cpu_count() # Number of processes to use\n",
+    "        global_filters=[],  # Filters to be run at the dataset level rather than the example level\n",
+    "        global_cleaners=[],  # Cleaners to be run at the dataset level rather than the example level\n",
+    "        cleaning_first=False,  # Whether to run the cleaning transformations first\n",
+    "        globals_first=False,  # Whether to run the global transformations first\n",
+    "        dry_run=False,  # Whether to run the pipeline or only calculate the various criteria and add as a column\n",
+    "        num_proc=os.cpu_count(),  # Number of processes to use\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Run the pipeline.\n",
@@ -120,20 +118,12 @@
     "                    )\n",
     "                for f in self.datasources[i][\"filters\"]:\n",
     "                    self.datasources[i][\"dataset\"] = self.__run_filter(\n",
-    "                        self.datasources[i][\"dataset\"],\n",
-    "                        column,\n",
-    "                        f,\n",
-    "                        dry_run,\n",
-    "                        num_proc\n",
+    "                        self.datasources[i][\"dataset\"], column, f, dry_run, num_proc\n",
     "                    )\n",
     "            else:\n",
     "                for f in self.datasources[i][\"filters\"]:\n",
     "                    self.datasources[i][\"dataset\"] = self.__run_filter(\n",
-    "                        self.datasources[i][\"dataset\"],\n",
-    "                        column,\n",
-    "                        f,\n",
-    "                        dry_run,\n",
-    "                        num_proc\n",
+    "                        self.datasources[i][\"dataset\"], column, f, dry_run, num_proc\n",
     "                    )\n",
     "                for c in self.datasources[i][\"cleaners\"]:\n",
     "                    name = c.__name__\n",
@@ -146,7 +136,8 @@
     "        if len(global_filters) > 0:\n",
     "            # concatenate all datasets\n",
     "            datasets = [\n",
-    "                d[\"dataset\"] for d in self.datasources\n",
+    "                d[\"dataset\"]\n",
+    "                for d in self.datasources\n",
     "                if not d.get(\"skip_global\", False)\n",
     "            ]\n",
     "            global_column = self.datasources[0][\"columns\"][0]\n",
@@ -158,12 +149,16 @@
     "                if not d.get(\"skip_global\", False):\n",
     "                    md.extend([d[\"name\"]] * len(d[\"dataset\"]))\n",
     "            meta_data = Dataset.from_dict({\"meta_data\": md})\n",
-    "            global_dataset_with_meta = concatenate_datasets([global_dataset, meta_data], axis=1)\n",
+    "            global_dataset_with_meta = concatenate_datasets(\n",
+    "                [global_dataset, meta_data], axis=1\n",
+    "            )\n",
     "\n",
     "            # Run the global filters\n",
     "            for f in global_filters:\n",
     "                logger.info(f\"Running global filter: {f.__name__}\")\n",
-    "                global_dataset_with_meta = f(global_dataset_with_meta, global_column, dry_run=dry_run)\n",
+    "                global_dataset_with_meta = f(\n",
+    "                    global_dataset_with_meta, global_column, dry_run=dry_run\n",
+    "                )\n",
     "\n",
     "            # Split the dataset back up\n",
     "            for i, d in enumerate(self.datasources):\n",
@@ -228,7 +223,7 @@
     }
    ],
    "source": [
-    "#|echo: true\n",
+    "# |echo: true\n",
     "show_doc(Pipeline.run)"
    ]
   },
@@ -7683,7 +7678,9 @@
     }
    ],
    "source": [
-    "len(ds), len(ds_1), len(pipeline.datasources[0][\"dataset\"]), len(pipeline.datasources[1][\"dataset\"])"
+    "len(ds), len(ds_1), len(pipeline.datasources[0][\"dataset\"]), len(\n",
+    "    pipeline.datasources[1][\"dataset\"]\n",
+    ")"
    ]
   },
   {
@@ -11703,9 +11700,8 @@
     "    \"\"\"\n",
     "    return formatted_example\n",
     "\n",
-    "fake_qa = ds_1.map(\n",
-    "    lambda x: {\"text\": formatted(x[\"text\"])}\n",
-    ")\n",
+    "\n",
+    "fake_qa = ds_1.map(lambda x: {\"text\": formatted(x[\"text\"])})\n",
     "datasources = [\n",
     "    {\n",
     "        \"dataset\": ds,\n",
@@ -11750,7 +11746,9 @@
     }
    ],
    "source": [
-    "len(ds_1), len(fake_qa), len(pipeline.datasources[0][\"dataset\"]), len(pipeline.datasources[1][\"dataset\"])"
+    "len(ds_1), len(fake_qa), len(pipeline.datasources[0][\"dataset\"]), len(\n",
+    "    pipeline.datasources[1][\"dataset\"]\n",
+    ")"
    ]
   },
   {
@@ -33708,8 +33706,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# | hide\n",
+    "import nbdev\n",
+    "\n",
+    "nbdev.nbdev_export()"
    ]
   }
  ],
