--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp clean"
+    "# | default_exp clean"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import re\n",
     "from faker import Faker\n",
     "import ftfy\n",
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -48,9 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "# From: https://github.com/bigscience-workshop/data-preparation/blob/main/preprocessing/training/01b_oscar_cleaning_and_filtering/filtering.py#L95\n",
-    "whitespace={\n",
+    "whitespace = {\n",
     "    \" \",\n",
     "    \" \",\n",
     "    \" \",\n",
@@ -65,15 +65,14 @@
     "    \"\",\n",
     "}\n",
     "\n",
+    "\n",
     "def normalize_whitespace(\n",
     "    text: str,  # The text to normalize\n",
-    ") -> str:       # The normalized text\n",
+    ") -> str:  # The normalized text\n",
     "    \"\"\"\n",
     "    Replace the various whitespace characters with the standard one.\n",
     "    \"\"\"\n",
-    "    text = \"\".join(\n",
-    "        [char if char not in whitespace else \" \" for char in text]\n",
-    "    )\n",
+    "    text = \"\".join([char if char not in whitespace else \" \" for char in text])\n",
     "    return text"
    ]
   },
@@ -93,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "unicode_punctuation = {\n",
     "    \"，\": \",\",\n",
     "    \"。\": \".\",\n",
@@ -131,15 +130,14 @@
     "    \"►\": \"-\",\n",
     "}\n",
     "\n",
+    "\n",
     "def normalize_punctuation(\n",
     "    text: str,  # The text to normalize\n",
-    ") -> str:       # The normalized text\n",
+    ") -> str:  # The normalized text\n",
     "    \"\"\"\n",
     "    Replace the various unicode punctuation characters with the standard ones.\n",
     "    \"\"\"\n",
-    "    text = \"\".join(\n",
-    "        [unicode_punctuation.get(char, char) for char in text]\n",
-    "    )\n",
+    "    text = \"\".join([unicode_punctuation.get(char, char) for char in text])\n",
     "    return text"
    ]
   },
@@ -152,7 +150,7 @@
     "# test the normalize_punctuation function\n",
     "text = \"，。、„”“«»１」「《》´∶：？！（）；–—．～’…━〈〉【】％►\"\n",
     "\n",
-    "assert normalize_punctuation(text) == \",.,\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\\'::?!();- - . ~\\'...-<>[]%-\""
+    "assert normalize_punctuation(text) == ',.,\"\"\"\"\"\"\"\"\"\"\\'::?!();- - . ~\\'...-<>[]%-'"
    ]
   },
   {
@@ -161,16 +159,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def remove_empty_lines(\n",
     "    text: str,  # The text to remove empty lines from\n",
-    ") -> str:       # The text with empty lines removed\n",
+    ") -> str:  # The text with empty lines removed\n",
     "    \"\"\"\n",
     "    Remove empty lines from the text.\n",
     "    Solution from https://stackoverflow.com/a/3711884/5768407\n",
     "    \"\"\"\n",
     "    lines = text.splitlines()\n",
-    "    filtered = filter(lambda x: not re.match(r'^\\s*$', x), lines)\n",
+    "    filtered = filter(lambda x: not re.match(r\"^\\s*$\", x), lines)\n",
     "    return \"\\n\".join(filtered)"
    ]
   },
@@ -196,11 +194,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_urls(\n",
-    "    text: str,                              # The text to replace URLs in\n",
-    "    dummy: str = \"https://example.com/\",    # The dummy text to replace URLs with\n",
-    ") -> str:                                   # The text with URLs replaced\n",
+    "    text: str,  # The text to replace URLs in\n",
+    "    dummy: str = \"https://example.com/\",  # The dummy text to replace URLs with\n",
+    ") -> str:  # The text with URLs replaced\n",
     "    \"\"\"Replace urls from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"http\\S+\", dummy, text)"
    ]
@@ -224,13 +222,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_dates(\n",
-    "    text: str,                  # The text to remove dates from\n",
-    "    dummy: str = fake.date(),   # The dummy text to replace dates with\n",
-    ") -> str:                       # The text with dates replaced\n",
+    "    text: str,  # The text to remove dates from\n",
+    "    dummy: str = fake.date(),  # The dummy text to replace dates with\n",
+    ") -> str:  # The text with dates replaced\n",
     "    \"\"\"Replace dates from text with a dummy.\"\"\"\n",
-    "    return re.sub(r'\\d{1,2}/\\d{1,2}/\\d{4}', dummy, text)"
+    "    return re.sub(r\"\\d{1,2}/\\d{1,2}/\\d{4}\", dummy, text)"
    ]
   },
   {
@@ -269,11 +267,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_email(\n",
-    "    text: str,                          # The text to replace email addresses in\n",
-    "    dummy: str = fake.email(),          # The dummy text to replace email addresses with\n",
-    ") -> str:                               # The text with email addresses replaced\n",
+    "    text: str,  # The text to replace email addresses in\n",
+    "    dummy: str = fake.email(),  # The dummy text to replace email addresses with\n",
+    ") -> str:  # The text with email addresses replaced\n",
     "    \"\"\"Replace email addresses from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"[\\w\\.-]+@[\\w\\.-]+\", dummy, text)"
    ]
@@ -292,8 +290,14 @@
     "\n",
     "assert replace_email(email_after_space, \"example@email.com\") == \"foo example@email.com\"\n",
     "assert replace_email(email_before_space, \"example@email.com\") == \"example@email.com bar\"\n",
-    "assert replace_email(email_with_forward_periods, \"example@email.com\") == \"example@email.com\"\n",
-    "assert replace_email(email_with_backward_periods, \"example@email.com\") == \"example@email.com\""
+    "assert (\n",
+    "    replace_email(email_with_forward_periods, \"example@email.com\")\n",
+    "    == \"example@email.com\"\n",
+    ")\n",
+    "assert (\n",
+    "    replace_email(email_with_backward_periods, \"example@email.com\")\n",
+    "    == \"example@email.com\"\n",
+    ")"
    ]
   },
   {
@@ -302,11 +306,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_phone(\n",
-    "    text: str,                          # The text to replace phone numbers in\n",
-    "    dummy: str = fake.phone_number(),   # The dummy text to replace phone numbers with\n",
-    ") -> str:                               # The text with phone numbers replaced\n",
+    "    text: str,  # The text to replace phone numbers in\n",
+    "    dummy: str = fake.phone_number(),  # The dummy text to replace phone numbers with\n",
+    ") -> str:  # The text with phone numbers replaced\n",
     "    \"\"\"Replace phone numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\(?\\d{3}\\)?-? *\\d{3}-? *-?\\d{4}\", dummy, text)"
    ]
@@ -337,12 +341,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_ip(\n",
-    "    text,                       # The text to replace ip addresses in\n",
+    "    text,  # The text to replace ip addresses in\n",
     "    dummy1: str = fake.ipv4(),  # The dummy text to replace ipv4 addresses with\n",
     "    dummy2: str = fake.ipv6(),  # The dummy text to replace ipv6 addresses with\n",
-    ") -> str:                       # The text with ip addresses replaced\n",
+    ") -> str:  # The text with ip addresses replaced\n",
     "    \"\"\"\n",
     "    Replace ip addresses from text with a dummy.\n",
     "    Solution from https://github.com/bigcode-project/bigcode-analysis/blob/main/data_analysis/pii/utils/emails_ip_addresses_detection.py#L48\n",
@@ -376,11 +380,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_credit_card(\n",
-    "    text: str,                              # The text to replace credit card numbers in\n",
-    "    dummy: str = fake.credit_card_number(), # The dummy text to replace credit card numbers with\n",
-    ") -> str:                                   # The text with credit card numbers replaced\n",
+    "    text: str,  # The text to replace credit card numbers in\n",
+    "    dummy: str = fake.credit_card_number(),  # The dummy text to replace credit card numbers with\n",
+    ") -> str:  # The text with credit card numbers replaced\n",
     "    \"\"\"Replace credit card numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\d{4}-\\d{4}-\\d{4}-\\d{4}\", dummy, text)"
    ]
@@ -395,8 +399,14 @@
     "credit_card_after_space = \"foo 1111-2222-3333-4444\"\n",
     "credit_card_before_space = \"1111-2222-3333-4444 bar\"\n",
     "\n",
-    "assert replace_credit_card(credit_card_after_space, \"1234-5678-9012-3456\") == \"foo 1234-5678-9012-3456\"\n",
-    "assert replace_credit_card(credit_card_before_space, \"1234-5678-9012-3456\") == \"1234-5678-9012-3456 bar\""
+    "assert (\n",
+    "    replace_credit_card(credit_card_after_space, \"1234-5678-9012-3456\")\n",
+    "    == \"foo 1234-5678-9012-3456\"\n",
+    ")\n",
+    "assert (\n",
+    "    replace_credit_card(credit_card_before_space, \"1234-5678-9012-3456\")\n",
+    "    == \"1234-5678-9012-3456 bar\"\n",
+    ")"
    ]
   },
   {
@@ -405,11 +415,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def replace_ssn(\n",
-    "    text: str,                  # The text to replace social security numbers in\n",
-    "    dummy: str = fake.ssn(),    # The dummy text to replace social security numbers with\n",
-    ") -> str:                       # The text with social security numbers replaced\n",
+    "    text: str,  # The text to replace social security numbers in\n",
+    "    dummy: str = fake.ssn(),  # The dummy text to replace social security numbers with\n",
+    ") -> str:  # The text with social security numbers replaced\n",
     "    \"\"\"Replace social security numbers from text with a dummy.\"\"\"\n",
     "    return re.sub(r\"\\d{3}-\\d{2}-\\d{4}\", dummy, text)"
    ]
@@ -434,10 +444,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def fix_utf8_encoding(\n",
-    "    text: str,              # The text to fix\n",
-    ") -> str:                   # The fixed text\n",
+    "    text: str,  # The text to fix\n",
+    ") -> str:  # The fixed text\n",
     "    \"\"\"Fix utf8 text using ftfy.\"\"\"\n",
     "    return ftfy.fix_text(text)"
    ]
@@ -449,14 +459,14 @@
    "outputs": [],
    "source": [
     "# test the fix_utf8_encoding function\n",
-    "bad_text = 'âœ” No problems'\n",
-    "assert fix_utf8_encoding(bad_text) == '✔ No problems'\n",
-    "bad_text = 'dÃ©jÃ  vu'\n",
-    "assert fix_utf8_encoding(bad_text) == 'déjà vu'\n",
-    "bad_text = 'Ã©'\n",
-    "assert fix_utf8_encoding(bad_text) == 'é'\n",
-    "bad_text = 'P&EACUTE;REZ'\n",
-    "assert fix_utf8_encoding(bad_text) == 'PÉREZ'"
+    "bad_text = \"âœ” No problems\"\n",
+    "assert fix_utf8_encoding(bad_text) == \"✔ No problems\"\n",
+    "bad_text = \"dÃ©jÃ  vu\"\n",
+    "assert fix_utf8_encoding(bad_text) == \"déjà vu\"\n",
+    "bad_text = \"Ã©\"\n",
+    "assert fix_utf8_encoding(bad_text) == \"é\"\n",
+    "bad_text = \"P&EACUTE;REZ\"\n",
+    "assert fix_utf8_encoding(bad_text) == \"PÉREZ\""
    ]
   },
   {
@@ -465,8 +475,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# | hide\n",
+    "import nbdev\n",
+    "\n",
+    "nbdev.nbdev_export()"
    ]
   }
  ],
