--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp helpers"
+    "# | default_exp helpers"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import os\n",
     "import re\n",
     "import squeakily\n",
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "# def quick_size_estimation(\n",
     "#     ds: Dataset,\n",
     "#     num_proc: int,\n",
@@ -78,7 +78,7 @@
     "\n",
     "#     partial_ds = partial_ds.map(\n",
     "#         get_size_per_example,\n",
-    "#         batched=True, \n",
+    "#         batched=True,\n",
     "#         num_proc=num_proc,\n",
     "#         batch_size=batch_size,\n",
     "#         input_columns=[content_key],\n",
@@ -94,12 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "def get_words(\n",
-    "    text: str, # the text to extract words from\n",
+    "    text: str,  # the text to extract words from\n",
     ") -> list:\n",
     "    \"\"\"custom regex to extract all the words in a string\"\"\"\n",
-    "    return re.findall(r'\\w+', text.lower())"
+    "    return re.findall(r\"\\w+\", text.lower())"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "# Built from native speakers, with inspiration from\n",
     "# https://github.com/zacanger/profane-words\n",
     "# and\n",
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "# From Bigscience https://github.com/bigscience-workshop/data-preparation/blob/main/preprocessing/training/01a_catalogue_cleaning_and_filtering/clean_helpers/stopwords.py\n",
     "\n",
     "stopword_ratios = {\n",
@@ -7412,16 +7412,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "class FastTextLanguageDetector:\n",
     "    def __init__(self, model_path: str = \"/tmp/lid.176.bin\"):\n",
     "        import fasttext\n",
+    "\n",
     "        self.model_path = model_path\n",
     "        self.model = fasttext.load_model(model_path)\n",
     "\n",
     "    def get_language(self, text):\n",
     "        lines = \" \".join(text.splitlines())\n",
-    "        prediction = self.model.predict(lines, k=1) # returns top 2 matching languages\n",
+    "        prediction = self.model.predict(lines, k=1)  # returns top 2 matching languages\n",
     "        lang, prob = prediction[0][0].replace(\"__label__\", \"\"), prediction[1][0]\n",
     "        return lang, prob\n",
     "\n",
@@ -7435,19 +7436,21 @@
     "        path = os.path.join(output_dir, \"lid.176.bin\")\n",
     "        if not os.path.exists(path):\n",
     "            # download pretrained model with standard lib (From: https://stackoverflow.com/questions/22676/how-to-download-a-file-over-http)\n",
-    "            response = urllib.request.urlretrieve(url, )\n",
+    "            response = urllib.request.urlretrieve(\n",
+    "                url,\n",
+    "            )\n",
     "            if response:\n",
     "                return cls(model_path=os.path.join(output_dir, \"lid.176.bin\"))\n",
     "            else:\n",
     "                raise Exception(\"Failed to download model\")\n",
     "        else:\n",
     "            return cls(model_path=path)\n",
-    "    \n",
+    "\n",
     "    def __reduce__(self):\n",
     "        return (self.__class__, (self.model_path,))\n",
-    "    \n",
+    "\n",
     "    def __eq__(self, other):\n",
-    "        return self.model_path == other.model_path\n"
+    "        return self.model_path == other.model_path"
    ]
   },
   {
@@ -7464,7 +7467,7 @@
     }
    ],
    "source": [
-    "#|eval: false\n",
+    "# |eval: false\n",
     "fasttext_model = FastTextLanguageDetector.from_pretrained()\n",
     "\n",
     "# test spanish\n",
@@ -7488,7 +7491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|eval: false\n",
+    "# |eval: false\n",
     "# test with multiple lines\n",
     "\n",
     "lang, prob = fasttext_model.get_language(\"Hello, how are you?\\nI am fine, thank you.\")\n",
@@ -7514,7 +7517,7 @@
     }
    ],
    "source": [
-    "#|eval: false\n",
+    "# |eval: false\n",
     "# check pickling works\n",
     "import pickle\n",
     "\n",
@@ -7544,13 +7547,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "class SentencePiece:\n",
     "    def __init__(\n",
     "        self,\n",
     "        model: str,\n",
     "    ):\n",
     "        import sentencepiece\n",
+    "\n",
     "        super().__init__()\n",
     "        self.sp = sentencepiece.SentencePieceProcessor()\n",
     "        self.sp.load(str(model))\n",
@@ -7566,8 +7570,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "KENLM_MODEL_REPO = \"edugp/kenlm\"\n",
+    "\n",
     "\n",
     "class KenlmModel:\n",
     "    digit_re: re.Pattern = re.compile(r\"\\d\")\n",
@@ -7765,7 +7770,7 @@
     }
    ],
    "source": [
-    "#|eval: false\n",
+    "# |eval: false\n",
     "model = KenlmModel.from_pretrained(\n",
     "    model_dataset=\"wikipedia\",\n",
     "    language=\"en\",\n",
@@ -7788,8 +7793,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
+    "# | hide\n",
+    "import nbdev\n",
+    "\n",
+    "nbdev.nbdev_export()"
    ]
   }
  ],
