Add filtering based on LLM predicted labels of text

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -618,6 +618,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "def check_labels(\n",
+    "    document,  # document to be analyzed\n",
+    "    labels: list,  # list of labels to check the document against\n",
+    "    model=None,  # model to check label\n",
+    "    dry_run=False,  # if True, returns the tags of the document\n",
+    ") -> bool:  # returns True if document relates to any of the labels\n",
+    "    \"\"\"\n",
+    "    Checks if the document relates to any of the labels.\n",
+    "    \"\"\"\n",
+    "    pred_labels = model(document)\n",
+    "    if dry_run:\n",
+    "        return pred_labels\n",
+    "    else:\n",
+    "        return any([label in pred_labels for label in labels])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# |eval: false\n",
+    "from squeakily.helpers import LLMLabeler\n",
+    "\n",
+    "instruction = \"Please classify the following text into one of the following categories:\"\n",
+    "labels = [\"positive\", \"negative\", \"neutral\"]\n",
+    "api_key = \"<api_key>\"\n",
+    "llm_labeler = LLMLabeler(instruction, labels, api_key=api_key)\n",
+    "\n",
+    "pos_text = \"I love this product!\"\n",
+    "neg_text = \"I hate this product!\"\n",
+    "neutral_text = \"This product is okay.\"\n",
+    "assert check_labels(pos_text, labels, model=llm_labeler) == True\n",
+    "assert check_labels(neg_text, labels, model=llm_labeler) == True\n",
+    "assert check_labels(neutral_text, labels, model=llm_labeler) == True\n",
+    "assert check_labels(pos_text, [\"negative\", \"neutral\"], model=llm_labeler) == False\n",
+    "\n",
+    "mixed_text = \"I love this product! I hate this product! This product is okay.\"\n",
+    "pred_labels = check_labels(mixed_text, labels, model=llm_labeler, dry_run=True)\n",
+    "assert set(pred_labels) == set(labels)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
