--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,6 +33,7 @@
     "import urllib.request\n",
     "\n",
     "from huggingface_hub import cached_download, hf_hub_url\n",
+    "from pydantic import BaseModel, Field\n",
     "from requests.exceptions import HTTPError\n",
     "from typing import Dict"
    ]
@@ -47,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7400,6 +7403,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7535,6 +7539,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7748,6 +7753,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7785,6 +7791,115 @@
     "perplex_2 = model.get_perplexity(\"im hella trippin\")\n",
     "\n",
     "assert perplex_1 < perplex_2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Automatic Model Labeling of text for filtering using langchain. Inspired by the \"Textbooks Are All You Need\" paper by [Gunasekar et al.](https://arxiv.org/abs/2306.11644)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "class LLMLabelerParser(BaseModel):\n",
+    "    labels: list[str] = Field(\n",
+    "        ..., title=\"Labels\", description=\"Labels that the LLM classifies the text as\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class LLMLabeler:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        instruction: str,\n",
+    "        labels: list[str],\n",
+    "        model_name: str = \"gpt-3.5-turbo\",\n",
+    "        api_key: str = None,\n",
+    "        model_type: str = \"openai\",\n",
+    "    ):\n",
+    "        from langchain.output_parsers import PydanticOutputParser\n",
+    "        from langchain.chat_models import AzureChatOpenAI, ChatOpenAI\n",
+    "        from langchain.prompts import PromptTemplate\n",
+    "        from langchain.prompts.chat import (\n",
+    "            ChatPromptTemplate,\n",
+    "            SystemMessagePromptTemplate,\n",
+    "            HumanMessagePromptTemplate,\n",
+    "        )\n",
+    "\n",
+    "        self.instruction = instruction\n",
+    "        self.labels = labels\n",
+    "        # Set up a parser + inject instructions into the prompt template.\n",
+    "        self.parser = PydanticOutputParser(pydantic_object=LLMLabelerParser)\n",
+    "        prompt = PromptTemplate(\n",
+    "            template=\"{instruction}\\n{labels}\\n{format_instructions}\\n\",\n",
+    "            input_variables=[\"instruction\", \"labels\"],\n",
+    "            partial_variables={\n",
+    "                \"format_instructions\": self.parser.get_format_instructions()\n",
+    "            },\n",
+    "        )\n",
+    "        system_message_prompt = SystemMessagePromptTemplate(prompt=prompt)\n",
+    "        human_template = \"{text}\"\n",
+    "        human_message_prompt = HumanMessagePromptTemplate.from_template(human_template)\n",
+    "        self.chat_template = ChatPromptTemplate.from_messages(\n",
+    "            [system_message_prompt, human_message_prompt]\n",
+    "        )\n",
+    "\n",
+    "        if model_type == \"azure\":\n",
+    "            raise NotImplementedError(\"Azure models are not supported yet\")\n",
+    "        elif model_type == \"openai\":\n",
+    "            self.model = ChatOpenAI(\n",
+    "                openai_api_key=api_key, model_name=model_name, temperature=0\n",
+    "            )\n",
+    "        else:\n",
+    "            raise ValueError(f\"Model type {model_type} is not supported\")\n",
+    "\n",
+    "    def __call__(self, text: str):\n",
+    "        messages = self.chat_template.format_prompt(\n",
+    "            instruction=self.instruction, labels=self.labels, text=text\n",
+    "        ).to_messages()\n",
+    "        output = self.model(messages)\n",
+    "        predicted_labels = self.parser.parse(output.content)\n",
+    "        # check if all the predicted tags are in the list of tags\n",
+    "        assert all(\n",
+    "            [label in self.labels for label in predicted_labels.labels]\n",
+    "        ), f\"Predicted labels {predicted_labels.labels} are not in the list of tags {self.labels}\"\n",
+    "        return predicted_labels.labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# |eval: false\n",
+    "instruction = \"Please classify the following text into one of the following categories:\"\n",
+    "labels = [\"positive\", \"negative\", \"neutral\"]\n",
+    "api_key = \"<api_key>\"\n",
+    "llm_labeler = LLMLabeler(instruction, labels, api_key=api_key)\n",
+    "\n",
+    "pos_text = \"I love this product!\"\n",
+    "neg_text = \"I hate this product!\"\n",
+    "neutral_text = \"This product is okay.\"\n",
+    "mixed_text = \"I love this product! I hate this product! This product is okay.\"\n",
+    "\n",
+    "predicted_labels = llm_labeler(pos_text)\n",
+    "assert predicted_labels == [\"positive\"]\n",
+    "\n",
+    "predicted_labels = llm_labeler(neg_text)\n",
+    "assert predicted_labels == [\"negative\"]\n",
+    "\n",
+    "predicted_labels = llm_labeler(neutral_text)\n",
+    "assert predicted_labels == [\"neutral\"]\n",
+    "\n",
+    "predicted_labels = llm_labeler(mixed_text)\n",
+    "assert set(predicted_labels) == set(labels)"
    ]
   },
   {
