Add pydantic as requirement, and remove python3.10 features

--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -35,7 +35,7 @@
     "from huggingface_hub import cached_download, hf_hub_url\n",
     "from pydantic import BaseModel, Field\n",
     "from requests.exceptions import HTTPError\n",
-    "from typing import Dict"
+    "from typing import Dict, List"
    ]
   },
   {
@@ -7809,7 +7809,7 @@
    "source": [
     "# | export\n",
     "class LLMLabelerParser(BaseModel):\n",
-    "    labels: list[str] = Field(\n",
+    "    labels: List = Field(\n",
     "        ..., title=\"Labels\", description=\"Labels that the LLM classifies the text as\"\n",
     "    )\n",
     "\n",
@@ -7818,7 +7818,7 @@
     "    def __init__(\n",
     "        self,\n",
     "        instruction: str,\n",
-    "        labels: list[str],\n",
+    "        labels: List,\n",
     "        model_name: str = \"gpt-3.5-turbo\",\n",
     "        api_key: str = None,\n",
     "        model_type: str = \"openai\",\n",
