--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -43,7 +43,8 @@
     "from rich.logging import RichHandler\n",
     "from squeakily.helpers import flagged_words, get_words\n",
     "from squeakily.helpers import stopwords, stopword_ratios\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "from typing import Set"
    ]
   },
   {
@@ -697,7 +698,7 @@
     "random.seed(MINHASH_SEED)\n",
     "\n",
     "lsh: MinHashLSH = None\n",
-    "dup_ids: set[int] = None"
+    "dup_ids: Set = None"
    ]
   },
   {
@@ -894,9 +895,7 @@
     "    threshold: float = 0.85,  # The threshold to use for calculating the false positive rate.\n",
     "    column: str = \"content\",  # The column to use for calculating the false positive rate.\n",
     "    verbose: bool = False,\n",
-    ") -> set[\n",
-    "    int\n",
-    "]:  # The set of duplicate ids that should be removed, leaving only one id in each community.\n",
+    ") -> Set:  # The set of duplicate ids that should be removed, leaving only one id in each community.\n",
     "    \"\"\"\n",
     "    Find the duplicate communities from the queried dataset.\n",
     "    \"\"\"\n",
@@ -908,7 +907,7 @@
     "        for y in record[\"__neighbors__\"]:\n",
     "            g.addEdge(record[\"__id__\"], y, addMissing=True)\n",
     "\n",
-    "    to_remove: set[int] = set()\n",
+    "    to_remove: Set = set()\n",
     "    samples: list[list[int]] = []\n",
     "    if not community_detection:\n",
     "        cc = nk.components.ConnectedComponents(g)\n",
