add export_to_path method, change nbs.00_core.ipynb

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,7 +167,29 @@
     "                    self.datasources[i][\"dataset\"] = global_dataset_with_meta.filter(\n",
     "                        lambda x: x[\"meta_data\"] == d[\"name\"],\n",
     "                        num_proc=num_proc,\n",
-    "                    )"
+    "                    )\n",
+    "\n",
+    "    def export_to_path(self, output_path):\n",
+    "        \"\"\"\n",
+    "        Export the processed datasets to a specified output path\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            os.makedirs(output_path, exist_ok=True)\n",
+    "        except OSError as e:\n",
+    "            logger.error(f\"Failed to create directory: {output_path}. Error: {str(e)}\")\n",
+    "            return\n",
+    "\n",
+    "        for i, datasource in enumerate(self.datasources):\n",
+    "            name = datasource[\"name\"]\n",
+    "            filename = f\"{name}.csv\"\n",
+    "            filepath = os.path.join(output_path, filename)\n",
+    "            try:\n",
+    "                datasource[\"dataset\"].to_csv(filepath, index=False)\n",
+    "                logger.info(f\"Exported {name} dataset to {filepath}\")\n",
+    "            except Exception as e:\n",
+    "                logger.error(\n",
+    "                    f\"Failed to export {name} dataset to {filepath}. Error: {str(e)}\"\n",
+    "                )"
    ]
   },
   {
@@ -3586,6 +3609,10 @@
     "\n",
     "pipeline = Pipeline(datasources)\n",
     "pipeline.run(dry_run=True, global_filters=[minhash_dedup])\n",
+    "\n",
+    "# function call to export the processed data source to a desired path\n",
+    "# output_path = \"/path/to/desired/path\"\n",
+    "# pipeline.export_to_path(output_path)\n",
     "\n",
     "assert len(ds) == len(pipeline.datasources[0][\"dataset\"])\n",
     "assert \"duplicate\" in pipeline.datasources[0][\"dataset\"].features\n",
